Bug Fix:ExCalendar covered user profile panel.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -334,7 +334,7 @@ b.r3{margin: 0px}
 
 .createset #calendar_map_container{
     display:block; position:absolute;
-    width: 310px; height: 165px; z-index: 100;
+    width: 310px; height: 165px; z-index: 10;
     margin-top: 120px; margin-left: 325px; 
 }
 
