--- a/static/js/excal/skin/default/excal.css
+++ b/static/js/excal/skin/default/excal.css
@@ -1,10 +1,10 @@
-#exCalendarIframe { display:none; left:0px; top:0px; position:absolute; z-index:99; }
-.exCalendarContainer { clear:both; display:none; position:absolute; margin:0; padding:0; width:310px; height:165px; z-index: 100; font-size: 9pt;  }
+#exCalendarIframe { display:none; left:0px; top:0px; position:absolute; z-index:9; }
+.exCalendarContainer { clear:both; display:none; position:absolute; margin:0; padding:0; width:310px; height:165px; z-index:10; font-size:9pt;  }
 .exCalendarContainer .exCalDays { display:block; position:relative; float:left; width:218px; }
 .exCalendarContainer .exCalDays table { background:#D3D4D4; }
 .exCalendarContainer .exCalDays table a { text-decoration:none; color:#868686; }
 .exCalendarContainer .exCalDays table th { font-weight: bold; height:25px; }
-.exCalendarContainer .exCalDays table th a { font-weight: normal; text-decoration: none; color: #FFF; padding: 1px; }
+.exCalendarContainer .exCalDays table th a { font-weight: normal; text-decoration: none; color: #FFF; padding:1px; }
 .exCalendarContainer .exCalDays table td { height:20px; width:30px; text-align: center; background-color:#E5E6E9; overflow:hidden; }
 .exCalendarContainer .exCalDays table td a { display:block; width:30px; height:15px; padding-top:5px; line-height:9pt; }
 .exCalendarContainer .exCalDays table td a:hover { background-color:#A8B7D2; color:#FFFFFF; }
